Disable preview features by default