@@ -10,7 +10,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<solar-parent.jdkVersion>16</solar-parent.jdkVersion>
-		<solar-parent.enablePreview>--enable-preview</solar-parent.enablePreview>
+		<solar-parent.enablePreview/>
 		<solar-parent.skipJavadoc>false</solar-parent.skipJavadoc>
 		<solar-parent.skipSources>false</solar-parent.skipSources>
 		<solar-parent.autoVersionSubmodules>true</solar-parent.autoVersionSubmodules>
